tests/ui/match/issue-12552.stderr
error[E0308]: mismatched types
  --> $DIR/issue-12552.rs:6:5
   |
LL |   match t {
   |         - this expression has type `Result<_, {integer}>`
LL |     Some(k) => match k {
   |     ^^^^^^^ expected `Result<_, {integer}>`, found `Option<_>`
   |
   = note: expected enum `Result<_, {integer}>`
              found enum `Option<_>`
help: try wrapping the pattern in `Ok`
   |
LL |     Ok(Some(k)) => match k {
   |     +++       +

error[E0308]: mismatched types
  --> $DIR/issue-12552.rs:9:5
   |
LL |   match t {
   |         - this expression has type `Result<_, {integer}>`
...
LL |     None => ()
   |     ^^^^
   |     |
   |     expected `Result<_, {integer}>`, found `Option<_>`
   |     `None` is interpreted as a unit variant, not a new binding
   |
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
   = note: unit variant defined here
   |
   = note: expected enum `Result<_, {integer}>`
              found enum `Option<_>`
help: try wrapping the pattern in `Ok`
   |
LL |     Ok(None) => ()
   |     +++    +
help: introduce a new binding instead
   |
LL -     None => ()
LL +     other_none => ()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
